--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
     
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="Manifest.json">
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/animate.css">
